--- a/src/FrontendAccountManagement.Web/Views/AccountManagement/EditUserDetails.cshtml
+++ b/src/FrontendAccountManagement.Web/Views/AccountManagement/EditUserDetails.cshtml
@@ -4,7 +4,7 @@
 @model EditUserDetailsViewModel
 
 @{
-    ViewData["Title"] = Localizer["EditUserDetails"];
+    ViewData["Title"] = Localizer["EditUserDetailsTitle"];
 
     var errorsViewModel = new ErrorsViewModel(ViewData.ModelState.ToErrorDictionary(), Localizer);
 }
