Feature/404751 check personaldetails changes3 (#45)
* Added hidden fields

* Added hidden fields

* Mapped firtname, lastname

* Minor changes:constants appended with key, hidden fields chnaged to <input type=hidden  format

--- a/src/FrontendAccountManagement.Web/Views/AccountManagement/EditUserDetails.cshtml
+++ b/src/FrontendAccountManagement.Web/Views/AccountManagement/EditUserDetails.cshtml
@@ -16,6 +16,8 @@
                 @await Html.PartialAsync("Partials/Govuk/_ErrorSummary", errorsViewModel)
 
                 <form asp-controller="AccountManagement" asp-action="PagePath.WhatAreYourDetails" method="post">
+                    <input type="hidden" asp-for="OriginalFirstName" />
+                    <input type="hidden" asp-for="OriginalLastName" />
                     <input type="hidden" asp-for="OriginalJobTitle" />
                     <input type="hidden" asp-for="OriginalTelephone" />
                     <fieldset class="govuk-fieldset">
