--- a/src/FrontendAccountManagement.Web/Views/AccountManagement/ManageAccount.cshtml
+++ b/src/FrontendAccountManagement.Web/Views/AccountManagement/ManageAccount.cshtml
@@ -163,21 +163,22 @@
                 </dl>
                 <br />
 
-                <h2 class="govuk-heading-m govuk-!-margin-bottom-4">
-                    @Localizer["ManageYourTeam"]
-                </h2>
-
-                <div class="govuk-!-margin-bottom-4">
-                    @Html.ActionLink(Localizer["AddTeamMember"].Value,
-                             "TeamMemberEmail",
-                             "AccountManagement",
-                             null,
-                             new { @class = "govuk-link govuk-link--no-visited-state govuk-body-m" })
-                </div>
-                <feature name="RemoveUsers">
-                    @await Component.InvokeAsync("ManageTeam")
-                </feature>
-
+                @if (Model.IsBasicUser.HasValue && !Model.IsBasicUser.Value)
+                {
+                    <h2 class="govuk-heading-m govuk-!-margin-bottom-4">
+                        @Localizer["ManageYourTeam"]
+                    </h2>
+                    <div class="govuk-!-margin-bottom-4">
+                        @Html.ActionLink(Localizer["AddTeamMember"].Value,
+                                 "TeamMemberEmail",
+                                 "AccountManagement",
+                                 null,
+                                 new { @class = "govuk-link govuk-link--no-visited-state govuk-body-m" })
+                    </div>
+                    <feature name="RemoveUsers">
+                        @await Component.InvokeAsync("ManageTeam")
+                    </feature>
+                }
             </div>
         </div>
     </main>
