--- a/src/FrontendAccountManagement.Web/Views/AccountManagement/CompanyDetailsUpdated.cshtml
+++ b/src/FrontendAccountManagement.Web/Views/AccountManagement/CompanyDetailsUpdated.cshtml
@@ -1,4 +1,5 @@
-﻿@using FrontendAccountManagement.Web.ViewModels.AccountManagement
+﻿@using static FrontendAccountManagement.Web.Extensions.DatetimeExtension;
+@using FrontendAccountManagement.Web.ViewModels.AccountManagement
 @model CompanyDetailsUpdatedViewModel
 
 <div class="govuk-width-container">
@@ -10,7 +11,16 @@
                         @Localizer["Header"]
                     </h1>
                 </div>
-                <p class="govuk-body">@Localizer["ChangedBy", Model.UserName, Model.ChangeTime, Model.ChangeDate]</p>
+                <p class="govuk-body">@Localizer[
+                    "ChangedBy",
+                    Model.UserName,
+                    Model.ChangeDate.ToString("hh:mm"),
+                    Model.ChangeDate.ToString("tt").ToLower(),
+                    Model.ChangeDate.Day,
+                    Model.ChangeDate.GetDateOrdinal(),
+                    Model.ChangeDate.ToString("MMMM"),
+                    Model.ChangeDate.Year]
+                 </p>
                 <p class="govuk-body govuk-!-font-weight-bold">@Localizer["WhatHappensNext"]</p>
                 <p class="govuk-body">@Localizer["Body"]<br/>@Localizer["Body2"]</p>
                 <a asp-action="ManageAccount" asp-controller="AccountManagement" class="govuk-link" data-module="govuk-link">
