--- a/src/FrontendAccountManagement.Web/Views/AccountManagement/CompanyDetailsUpdated.cshtml
+++ b/src/FrontendAccountManagement.Web/Views/AccountManagement/CompanyDetailsUpdated.cshtml
@@ -14,7 +14,7 @@
                 <p class="govuk-body">@Localizer[
                     "ChangedBy",
                     Model.UserName,
-                    Model.ChangeDate.ToString("hh:mm"),
+                    Model.ChangeDate.ToLocalTime().ToString("hh:mm"),
                     Model.ChangeDate.ToString("tt").ToLower(),
                     Model.ChangeDate.Day,
                     Model.ChangeDate.GetDateOrdinal(),
