--- a/src/FrontendAccountManagement.Web/Views/AccountManagement/CompanyDetailsUpdated.cshtml
+++ b/src/FrontendAccountManagement.Web/Views/AccountManagement/CompanyDetailsUpdated.cshtml
@@ -2,6 +2,10 @@
 @using FrontendAccountManagement.Web.ViewModels.AccountManagement
 @model CompanyDetailsUpdatedViewModel
 
+@{
+    ViewData["Title"] = Localizer["Title"];
+}
+
 <div class="govuk-width-container">
     <main class="govuk-main-wrapper govuk-!-padding-top-4" id="main-content" role="main">
         <div class="govuk-grid-row">
