--- a/src/FrontendAccountManagement.Web/Views/AccountManagement/CheckCompaniesHouseDetails.cshtml
+++ b/src/FrontendAccountManagement.Web/Views/AccountManagement/CheckCompaniesHouseDetails.cshtml
@@ -22,7 +22,7 @@
                     <dl class="govuk-summary-list">
                         <div class="govuk-summary-list__row">
                             <dt class="govuk-summary-list__key">
-                                @Localizer["TradingName"]:
+                                @Localizer["TradingName"]
                             </dt>
                             <dd class="govuk-summary-list__value">
                                 @Model.TradingName
@@ -32,7 +32,7 @@
                         </div>
                         <div class="govuk-summary-list__row">
                             <dt class="govuk-summary-list__key">
-                                @Localizer["Address"]:
+                                @Localizer["Address"]
                             </dt>
                             <dd class="govuk-summary-list__value">
                                 @Model.Address
@@ -42,7 +42,7 @@
                         </div>
                         <div class="govuk-summary-list__row">
                             <dt class="govuk-summary-list__key">
-                                @Localizer["UKNation"]:
+                                @Localizer["UKNation"]
                             </dt>
                             <dd class="govuk-summary-list__value">
                                 @Model.UkNation.GetDisplayName()
