--- a/src/FrontendAccountManagement.Web/Views/AccountManagement/ManageAccount.cshtml
+++ b/src/FrontendAccountManagement.Web/Views/AccountManagement/ManageAccount.cshtml
@@ -104,9 +104,7 @@
                     <dd class="govuk-summary-list__actions">
                         @if (Model != null && Model.IsChangeRequestPending == true)
                         {
-                        <dt class="govuk-summary-list__value">
-                                @Localizer["Pending"]
-                        </dt>
+                        <strong class="govuk-tag govuk-tag--yellow waiting-for-approval">@Localizer["Pending"]</strong>
                         }
                         else
                         {
