[feature/423/702: Added missing browser page titles as described in the story]

--- a/src/FrontendAccountManagement.Web/Views/AccountManagement/ConfirmCompanyDetails.cshtml
+++ b/src/FrontendAccountManagement.Web/Views/AccountManagement/ConfirmCompanyDetails.cshtml
@@ -1,5 +1,9 @@
 ﻿@model FrontendAccountManagement.Web.ViewModels.AccountManagement.ConfirmCompanyDetailsViewModel
 
+@{
+    ViewData["Title"] = Localizer["PageTitle"];
+}
+
 @using (Html.BeginForm("ConfirmCompanyDetails", "AccountManagement", FormMethod.Post))
 {
     <div class="govuk-width-container">
