--- a/src/FrontendAccountManagement.Web/Views/AccountManagement/UpdateDetailsConfirmation.cshtml
+++ b/src/FrontendAccountManagement.Web/Views/AccountManagement/UpdateDetailsConfirmation.cshtml
@@ -4,6 +4,10 @@
 
 @model UpdateDetailsConfirmationViewModel
 
+@{
+    ViewData["Title"] = Localizer["PageTitle"];
+}
+
 <div class="govuk-width-container">
     <main class="govuk-main-wrapper govuk-!-padding-top-4" id="main-content" role="main">
         <div class="govuk-grid-row">
