--- a/src/FrontendAccountManagement.Web/Views/AccountManagement/CompanyDetailsUpdated.cshtml
+++ b/src/FrontendAccountManagement.Web/Views/AccountManagement/CompanyDetailsUpdated.cshtml
@@ -26,7 +26,7 @@
                     Model.ChangeDate.Year]
                  </p>
                 <p class="govuk-body govuk-!-font-weight-bold">@Localizer["WhatHappensNext"]</p>
-                <p class="govuk-body">@Localizer["Body"]<br/>@Localizer["Body2"]</p>
+                <p class="govuk-body">@Localizer["Body"]</p>
                 <a asp-action="ManageAccount" asp-controller="AccountManagement" class="govuk-link" data-module="govuk-link">
                     @Localizer["ManageAccountLink"]
                 </a>
