--- a/src/FrontendAccountManagement.Web/Views/AccountManagement/ManageAccount.cshtml
+++ b/src/FrontendAccountManagement.Web/Views/AccountManagement/ManageAccount.cshtml
@@ -170,7 +170,7 @@
                 </dl>
                 <br />
 
-                @if (Model.IsBasicUser.HasValue && !Model.IsBasicUser.Value)
+                @if (Model.IsAdmin.HasValue && Model.IsAdmin.Value)
                 {
                     <h2 class="govuk-heading-m govuk-!-margin-bottom-4">
                         @Localizer["ManageYourTeam"]
