--- a/src/FrontendAccountManagement.Web/Views/AccountManagement/ManageAccount.cshtml
+++ b/src/FrontendAccountManagement.Web/Views/AccountManagement/ManageAccount.cshtml
@@ -63,7 +63,7 @@
                             }
                             else
                             {
-                                <a href="~/@PagePath.UpdateTradingName" class="govuk-link govuk-link--no-visited-state">
+                                    <a href="~/@PagePath.ChangeCompanyDetails" class="govuk-link govuk-link--no-visited-state">
                                     @SharedLocalizer["Change"]
                                     <span class="govuk-visually-hidden"></span>
                                 </a>
