--- a/src/FrontendAccountManagement.Web/Views/Shared/Partials/Govuk/_ErrorSummary.cshtml
+++ b/src/FrontendAccountManagement.Web/Views/Shared/Partials/Govuk/_ErrorSummary.cshtml
@@ -11,7 +11,7 @@
             <ul class="govuk-list govuk-error-summary__list">
                 @foreach (var error in Model.Errors)
                 {
-                    var textInsert = Model.TextInserts?.FirstOrDefault(t => t.Key == error.Key).Value;
+                    var textInsert = Model.TextInserts?.Find(t => t.Key == error.Key).Value;
                     <li>
                         @for (var i = 0; i < error.Item2.Count; i++)
                         {
