Fix date display on update details confirmation page

--- a/src/FrontendAccountManagement.Web/Views/AccountManagement/DetailsChangeRequested.cshtml
+++ b/src/FrontendAccountManagement.Web/Views/AccountManagement/DetailsChangeRequested.cshtml
@@ -20,7 +20,7 @@
                 <p class="govuk-body">@Localizer[
                     "ChangedBy",
                     Model.Username,
-                    Model.UpdatedDatetime.ToString("hh:mm"),
+                    Model.UpdatedDatetime.ToString("h:mm"),
                     Model.UpdatedDatetime.ToString("tt").ToLower(),
                     Model.UpdatedDatetime.Day,
                     string.Empty, // The date ordinal - not yet implemented for Welsh.
