--- a/src/FrontendAccountManagement.Web/Views/AccountManagement/ChangeCompanyDetails.cshtml
+++ b/src/FrontendAccountManagement.Web/Views/AccountManagement/ChangeCompanyDetails.cshtml
@@ -11,7 +11,7 @@
                 </h1>
 
                 <p class="govuk-body">
-                    @Localizer["EmailLine", "EPRCustomerService@defra.gov.uk"]
+                    @Localizer["EmailLine", "EPRCustomerService@defra.gov.uk", "Change of organisation details"]
                 </p>
 
                 <p class="govuk-body">@Localizer["EmailContainLine"]</p>
