--- a/src/FrontendAccountManagement.Web/Views/AccountManagement/CompanyDetailsUpdated.cshtml
+++ b/src/FrontendAccountManagement.Web/Views/AccountManagement/CompanyDetailsUpdated.cshtml
@@ -4,8 +4,6 @@
 
 @{
     ViewData["Title"] = Localizer["Title"];
-    var changedDateAt = Model.ChangeDate;
-    var changedDate = changedDateAt.UtcToGmt();
 }
 
 <div class="govuk-width-container">
@@ -20,12 +18,12 @@
                 <p class="govuk-body">
                     @Localizer["ChangedBy",
                              Model.UserName,
-                             changedDate.ToString("h:mm"),
-                             changedDate.ToString("tt").ToLower(),
-                             changedDate.Day,
-                             changedDate.GetDateOrdinal(),
-                             changedDate.ToString("MMMM"),
-                             changedDate.Year]
+                             Model.ChangeDate.ToString("h:mm"),
+                             Model.ChangeDate.ToString("tt").ToLower(),
+                             Model.ChangeDate.Day,
+                             Model.ChangeDate.GetDateOrdinal(),
+                             Model.ChangeDate.ToString("MMMM"),
+                             Model.ChangeDate.Year]
                  </p>
                 <p class="govuk-body govuk-!-font-weight-bold">@Localizer["WhatHappensNext"]</p>
                 <p class="govuk-body">@Localizer["Body"]</p>
